# hiinakas

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
docs/: benchmark.md
hiinakas-common/: package.json  tsconfig.json
hiinakas-common/src/: card.ts  game.ts  index.ts  lobby.ts
hiinakas-server/: .env  .gitignore  Architecture.drawio  Architecture2.drawio  Cargo.toml  Dockerfile  build.rs  ecosystem.config.js  game.db  game.db-shm  game.db-wal  hiinakas.db  package-lock.json  package.json  tsconfig.json
hiinakas-server/migrations/: 001_create_game_winners_table.sql
hiinakas-server/src/: main.rs  main.ts  protos.rs
hiinakas-server/src/db/: sqlitedb.ts  stats.rs
hiinakas-server/src/game/: card.rs  card.ts  deck.rs  deck.ts  game_instance.rs  gamehandler.ts  handler.rs  instance.ts  mod.rs  player.rs  player.ts  table.rs  table.ts
hiinakas-server/src/lobby/: handler.rs  lobbies.ts  lobby.rs  lobby.ts  lobbyhandler.ts  mod.rs
hiinakas-server/src/proto/: card.rs  game.rs  lobby.rs  mod.rs  ws.rs
hiinakas-server/src/room/: room.ts
hiinakas-server/src/server/: http.ts  http_server.rs  https.ts  mod.rs  socketio.rs  stats.rs  ws_handler.rs  ws_server.rs
hiinakas-server/src/user/: userhandler.ts
hiinakas-server/src/utils/: crypto.rs  mod.rs  rot.rs  timer.rs
hiinakas-server/src/websocket/: socketio.ts
hiinakas-types/src/: card.proto  game.proto  lobby.proto  ws.proto
hiinakas-web/: .env  .gitignore  Dockerfile  README.md  declaration.d.ts  global.d.ts  index.html  manifest.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  service-worker.js  ssl-setup.sh  tsconfig.json  vite.config.ts
hiinakas-web/playwright-report/: index.html
hiinakas-web/scripts/: convert-to-webp.js  optimize-audio.js  process-cards.js
hiinakas-web/src/: index.tsx  mixin.scss  serviceWorker.js  theme.scss  vite-env.d.ts  webcomponent.ts
hiinakas-web/src/assets/area/: background.webp~  tableborder.png~  turn.png~
hiinakas-web/src/hooks/: useIsMobile.tsx  useMediaQuery.tsx
hiinakas-web/src/proto/: card.ts  game.ts  lobby.ts  ws.ts
hiinakas-web/src/stores/: deck.ts  floatingTextStore.ts  gameInstance.ts  hand.ts  menu.ts  opponent.ts  playerState.ts  stores.tsx  table.ts  timer.ts  turn.ts
hiinakas-web/src/util/: localStore.ts  notifications.ts  socketManager.ts  wsClient.ts  zones.ts
hiinakas-web/src/views/: gameview.module.scss  gameview.tsx  mainview.tsx  menuview.tsx
hiinakas-web/test-results/: .last-run.json
hiinakas-web/tests/: matchmaking.spec.ts
(+38 files in other folders)
