[package]
name = "hiinakas-server"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = [
    "rt-multi-thread", 
    "macros",          
    "sync",           
    "net",        
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4"] }
rand = "0.8"
smallvec = { version = "1.13" }
hashbrown = { version = "0.7" }
prost = "0.11"
tonic = "0.9"
openssl = { version = "0.10" }
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = { version = "0.26" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

[build-dependencies]
tonic-build = "0.9"
